<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>138</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>400</width>
    <height>125</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="autoFillBackground">
   <bool>false</bool>
  </property>
  <property name="styleSheet">
   <string notr="true">background: #ffffff;</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="item_image">
       <property name="minimumSize">
        <size>
         <width>183</width>
         <height>115</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>183</width>
         <height>115</height>
        </size>
       </property>
       <property name="styleSheet">
        <string notr="true">color: #ffffff;
text-align: center;
background:blue;</string>
       </property>
       <property name="text">
        <string>Ảnh</string>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="item_name">
         <property name="styleSheet">
          <string notr="true">color: black;
font-size: 16pt;
font-weight: bold;</string>
         </property>
         <property name="text">
          <string>Tên sản phẩm</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="item_price">
         <property name="maximumSize">
          <size>
           <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
         <property name="styleSheet">
          <string notr="true">color: rgb(198, 0, 0);
font-size: 20pt;
font-weight: bold;</string>
         </property>
         <property name="text">
          <string>Giá tiền</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="item_quantity">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="item_buy">
         <property name="maximumSize">
          <size>
           <width>100</width>
           <height>100</height>
          </size>
         </property>
         <property name="styleSheet">
          <string notr="true">background: rgb(176, 10, 0);
color: #ffffff;
border-radius: 5px;
height: 20px;</string>
         </property>
         <property name="text">
          <string>Mua </string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
